--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+html
+<!DOCTYPE html>
+<html lang="el">
+<head>
+  <meta charset="UTF-8" />
+  <title>Hellenic Goldsmithing Observatory</title>
+</head>
+<body>
+  <h1>Hellenic Goldsmithing Observatory</h1>
+  <p>Αυτή είναι η πρώτη δοκιμαστική σελίδα μου.</p>
+</body>
+</html>
