--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
 html
-<!DOCTYPE html>
+<!-- Header HTML (ready-to-paste) - Purpose: header with logo, language switch, and simple nav -->
+<!doctype html>
 <html lang="el">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Hellenic Goldsmithing Observatory</title>
+  <meta name="description" content="Header section: logo, language switch, and primary navigation for the site." />
+  <style>
+    :root {
+      --color-primary: #0b1b2b;   /* navy */
+      --color-accent1: #2e8b57;   /* emerald/green */
+      --color-accent2: #d49f2a;   /* amber */
+      --color-text: #111;
+      --color-bg: #fff;
+    }
+    * { box-sizing: border-box; }
+    body { margin: 0; font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial; color: var(--color-text); background: var(--color-bg); }
+    header { display:flex; align-items:center; justify-content:space-between; padding:1rem 1.25rem; border-bottom:1px solid #eee; }
+    .brand { display:flex; align-items:center; gap:1rem; }
+    .brand img { height: 56px; width:auto; }
+    .brand-title { font-weight:700; font-size:1.1rem; }
+    .lang-switch { display:flex; gap:.25rem; }
+    .lang-switch button {
+      padding:.5rem 1rem; border:1px solid var(--color-primary); background:#fff; color:var(--color-primary);
+      border-radius:6px; cursor:pointer; font-weight:600;
+    }
+    nav a { margin:0 .5rem; text-decoration:none; color:var(--color-primary); font-weight:600; }
+  </style>
 </head>
 <body>
-  <h1>Hellenic Goldsmithing Observatory</h1>
-  <p>Αυτή είναι η πρώτη δοκιμαστική σελίδα μου.</p>
+  <header>
+    <div class="brand" aria-label="Branding">
+      <!-- Replace with your actual logo file path -->
+      <img src="C:\Users\user\Desktop\ΕΛΛΝΙΚΟ ΠΑΡΑΤΗΡΗΤΡΙΟ ΑΡΓΥΡΟΧΡΥΣΟΧΟΙΑΣ\HelGO.png" alt="Logo: Hellenic Goldsmithing Observatory" />
+      <span class="brand-title">Hellenic Goldsmithing Observatory</span>
+    </div>
+
+    <div class="lang-switch" aria-label="Language switch">
+      <button type="button" id="btn-gr">GR</button>
+      <button type="button" id="btn-en">EN</button>
+    </div>
+  </header>
+
+  <!-- Optional: main navigation (Main Tabs) -->
+  <nav aria-label="Main navigation">
+    <a href="#home">Αρχική</a>
+    <a href="#about">Σχετικά</a>
+    <a href="#research">Έρευνα</a>
+    <a href="#contact">Επαφές</a>
+  </nav>
+
+  <!-- Minimal content area (tab-ready containers can go here) -->
+  <main id="content" role="main">
+    <!-- Tab content goes here -->
+  </main>
 </body>
 </html>
