--- a/index.html
+++ b/index.html
@@ -6,40 +6,23 @@ html
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Hellenic Goldsmithing Observatory</title>
   <style>
-    :root {
-      --color-primary: #0b1b2b;
-      --color-text: #111;
-      --color-bg: #fff;
-    }
+    :root { --color-primary: #0b1b2b; --color-green: #2e8b57; }
     * { box-sizing: border-box; }
-    body { margin: 0; font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial; color: var(--color-text); background: var(--color-bg); }
-
-    /* Header */
-    header { display:flex; align-items:center; justify-content:space-between;
-             padding:1rem 1.25rem; border-bottom:1px solid #eee; }
+    body { margin: 0; font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial; color: #111; background:#fff; }
+    header { display:flex; align-items:center; justify-content:space-between; padding:1rem 1.25rem; border-bottom:1px solid #eee; }
     .brand { display:flex; align-items:center; gap:1rem; }
-    .brand img { height: 40px; width:auto; }
+    .brand img { height:40px; }
     .brand-title { font-weight:700; font-size:1.1rem; }
-
     .lang-switch { display:flex; gap:.5rem; }
-    .lang-switch button { padding:.4rem .8rem; border:1px solid var(--color-primary);
-                          background:#fff; color:var(--color-primary);
-                          border-radius:6px; cursor:pointer; font-weight:700; }
-
-    /* Tabs */
+    .lang-switch button { padding:.4rem .8rem; border:1px solid #333; background:#fff; border-radius:6px; cursor:pointer; font-weight:700; }
     nav.main-nav { display:flex; gap:1rem; padding:.5rem 1rem; border-bottom:1px solid #eee; }
-    nav.main-nav button.tab-btn { background:transparent; border:0; font-weight:700; cursor:pointer; padding:.25rem .5rem; }
-    nav.main-nav button.tab-btn.active { border-bottom:2px solid var(--color-primary); }
-
+    nav.main-nav button { background:transparent; border:0; font-weight:700; cursor:pointer; padding:.25rem .5rem; }
     main { padding:1rem; }
-
     .tab { display:none; }
     .tab.active { display:block; }
-
-    /* Simple content blocks for visuals */
-    .hero { display:flex; gap:2rem; align-items: center; margin:1rem 0; }
-    .hero img { max-width:480px; width:100%; height:auto; border-radius:6px; }
-    .cta { display:inline-block; padding:.6rem 1rem; background:#2e8b57; color:#fff; text-decoration:none; border-radius:6px; font-weight:700; margin-top:.5rem; }
+    .hero { display:flex; gap:2rem; align-items:center; margin:1rem 0; }
+    .hero img { width:100%; max-width:520px; height:auto; border-radius:6px; }
+    .cta { display:inline-block; background:var(--color-green); color:#fff; padding:.6rem 1rem; border-radius:6px; text-decoration:none; font-weight:700; margin-top:.6rem; }
   </style>
 </head>
 <body>
@@ -49,131 +32,117 @@ html
       <img src="assets/logo.png" alt="Logo: Hellenic Goldsmithing Observatory" />
       <span class="brand-title">Hellenic Goldsmithing Observatory</span>
     </div>
-
     <div class="lang-switch" aria-label="Language switch">
       <button onclick="setLang('el')">GR</button>
       <button onclick="setLang('en')">EN</button>
     </div>
   </header>
 
-  <!-- Main Tabs -->
-  <nav class="main-nav" aria-label="Main navigation" id="main-nav" data-lang="el">
-    <!-- Greek labels (default) -->
-    <button class="tab-btn" data-target="home-el" onclick="openTab('home-el')">Αρχική</button>
-    <button class="tab-btn" data-target="about-el" onclick="openTab('about-el')">Σχετικά</button>
-    <button class="tab-btn" data-target="research-el" onclick="openTab('research-el')">Έρευνα</button>
-    <button class="tab-btn" data-target="contact-el" onclick="openTab('contact-el')">Επικοινωνία</button>
+  <nav class="main-nav" aria-label="Main navigation" id="main-nav">
+    <!-- Ελληνικά (από προεπιλογή φαίνονται) -->
+    <button data-target="home-el" onclick="openTab('home-el')">Αρχική</button>
+    <button data-target="about-el" onclick="openTab('about-el')">Σχετικά</button>
+    <button data-target="research-el" onclick="openTab('research-el')" style="display:none;">Έρευνα</button>
+    <button data-target="contact-el" onclick="openTab('contact-el')" style="display:none;">Επικοινωνία</button>
 
-    <!-- English labels (hidden unless EN is active) -->
-    <button class="tab-btn" data-target="home-en" onclick="openTab('home-en')" style="display:none;">Home</button>
-    <button class="tab-btn" data-target="about-en" onclick="openTab('about-en')" style="display:none;">About</button>
-    <button class="tab-btn" data-target="research-en" onclick="openTab('research-en')" style="display:none;">Research</button>
-    <button class="tab-btn" data-target="contact-en" onclick="openTab('contact-en')" style="display:none;">Contact</button>
+    <!-- Αγγλικά (κρυμμένα έως ότου επιλεγεί EN) -->
+    <button data-target="home-en" onclick="openTab('home-en')" style="display:none;">Home</button>
+    <button data-target="about-en" onclick="openTab('about-en')" style="display:none;">About</button>
+    <button data-target="research-en" onclick="openTab('research-en')" style="display:none;">Research</button>
+    <button data-target="contact-en" onclick="openTab('contact-en')" style="display:none;">Contact</button>
   </nav>
 
-  <main id="content" role="main">
-    <!-- Ελληνικά tabs -->
+  <main id="content">
+    <!-- Home el (Default) -->
     <section id="home-el" class="tab active" aria-label="Αρχική Ελληνικά">
       <div class="hero">
         <div>
           <h1>ΕΛΛΗΝΙΚΟ ΠΑΡΑΤΗΡΗΤΗΡΙΟ ΑΡΓΥΡΟΧΡΥΣΟΧΟΪΑΣ ΚΑΙ ΚΟΣΜΗΜΑΤΟΠΟΙΙΑΣ</h1>
           <p>Ένας χώρος έρευνας για το ελληνικό κόσμημα που χαρτογραφεί το σύστημα πολιτισμού, οικονομίας και τεχνικής εκπαίδευσης στην αργυροχρυσοχοΐα, σε διάλογο με τις διεθνείς και εγχώριες τάσεις.</p>
-          <a class="cta" href="#about-el">Μάθετε περισσότερα →</a>
+          <a class="cta" href="#about-el" onclick="openTab('about-el')">Μάθετε περισσότερα →</a>
         </div>
         <img src="assets/jewelry1.jpg" alt="Κοσμήματα σε εργαστήριο" />
       </div>
     </section>
 
-    <section id="about-el" class="tab" aria-label="Σχετικά Ελληνικά">
+    <!-- About el -->
+    <section id="about-el" class="tab" aria-label="Σχετικά Ελληνικά" style="display:none;">
       <h2>Τι είναι το Παρατηρητήριο</h2>
       <p>Το Ελληνικό Παρατηρητήριο Αργυροχρυσοχοΐας και Κοσμηματοποιίας (ΕΛΠΑΚ) αποτελεί μια ανεξάρτητη πρωτοβουλία...</p>
     </section>
 
-    <section id="research-el" class="tab" aria-label="Έρευνα Ελληνικά">
-      <h2>Έρευνα & Δράσεις</h2>
-      <p>Μελέτες / Studies (Ελληνικά)</p>
-    </section>
-
-    <section id="contact-el" class="tab" aria-label="Επικοινωνία Ελληνικά">
-      <h2>Επικοινωνία</h2>
-      <p>Email: info@example.org</p>
-    </section>
-
-    <!-- Αγγλικά tabs (hidden by default) -->
+    <!-- Home en -->
     <section id="home-en" class="tab" aria-label="Home English" style="display:none;">
       <div class="hero">
         <div>
           <h1>HELLENIC GOLDSMITHING OBSERVATORY</h1>
           <p>A research space dedicated to Greek jewelry that maps the interconnected system of culture, the economy, and technical education in silversmithing and goldsmithing, in dialogue with international and local trends.</p>
-          <a class="cta" href="#about-en">Learn more →</a>
+          <a class="cta" href="#about-en" onclick="openTab('about-en')">Learn more →</a>
         </div>
         <img src="assets/jewelry1.jpg" alt="Jewelry in studio" />
       </div>
     </section>
 
+    <!-- About en -->
     <section id="about-en" class="tab" aria-label="About English" style="display:none;">
       <h2>What is the Observatory</h2>
       <p>The Hellenic Goldsmithing Observatory (HElGO) is an independent initiative...</p>
     </section>
 
-    <section id="research-en" class="tab" aria-label="Research English" style="display:none;">
-      <h2>Research & Activities</h2>
-      <p>Studies (English)</p>
-    </section>
-
-    <section id="contact-en" class="tab" aria-label="Contact English" style="display:none;">
-      <h2>Contact</h2>
-      <p>Email: info@example.org</p>
-    </section>
   </main>
 
   <script>
-    // Simple tab switcher: show only the active tab
     function openTab(targetId) {
-      document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
+      document.querySelectorAll('.tab').forEach(t => t.style.display = 'none');
       const el = document.getElementById(targetId);
-      if (el) el.classList.add('active');
-      // Optional: update URL hash
+      if (el) el.style.display = 'block';
       history.replaceState(null, '', '#' + targetId);
     }
 
     function setLang(lang) {
-      // Swap language blocks: Greek vs English nav items and sections
-      const greekItems = document.querySelectorAll('nav.main-nav button[data-target^="home-el"], nav.main-nav button[data-target^="about-el"], nav.main-nav button[data-target^="research-el"], nav.main-nav button[data-target^="contact-el"]');
-      const englishItems = document.querySelectorAll('nav.main-nav button[data-target^="home-en"], nav.main-nav button[data-target^="about-en"], nav.main-nav button[data-target^="research-en"], nav.main-nav button[data-target^="contact-en"]');
-
+      // Εμφάνιση/κάλυψη κουμπιών tab σε κάθε γλώσσα
+      const greekBtns = Array.from(document.querySelectorAll('nav.main-nav button')).filter(b => b.textContent !== '' && b.style.display !== 'none');
+      // Πάρε τα ids των el/group
       if (lang === 'el') {
-        greekItems.forEach(b => b.style.display = '');
-        englishItems.forEach(b => b.style.display = 'none');
-        // Show Greek sections, hide English sections
-        document.getElementById('home-el').style.display = 'block';
-        document.getElementById('home-en').style.display = 'none';
-        document.getElementById('about-el').style.display = 'block';
-        document.getElementById('about-en').style.display = 'none';
-        document.getElementById('research-el').style.display = 'block';
-        document.getElementById('research-en').style.display = 'none';
-        document.getElementById('contact-el').style.display = 'block';
-        document.getElementById('contact-en').style.display = 'none';
+        // Εμφάνισε μόνο τα el items
+        document.querySelectorAll('nav.main-nav button').forEach(b => {
+          const t = b.getAttribute('data-target');
+          if (t.endsWith('-el')) b.style.display = '';
+          if (t.endsWith('-en')) b.style.display = 'none';
+        });
+        // Εμφάνισε τα el sections
+        ['home-el','about-el','research-el','contact-el'].forEach(id => {
+          const sec = document.getElementById(id);
+          if (sec) sec.style.display = (id === 'home-el') ? 'block' : 'block';
+        });
+        // Κρύψε τα en sections
+        ['home-en','about-en','research-en','contact-en'].forEach(id => {
+          const sec = document.getElementById(id);
+          if (sec) sec.style.display = 'none';
+        });
       } else {
-        greekItems.forEach(b => b.style.display = 'none');
-        englishItems.forEach(b => b.style.display = '');
-        document.getElementById('home-el').style.display = 'none';
-        document.getElementById('home-en').style.display = 'block';
-        document.getElementById('about-el').style.display = 'none';
-        document.getElementById('about-en').style.display = 'block';
-        document.getElementById('research-el').style.display = 'none';
-        document.getElementById('research-en').style.display = 'block';
-        document.getElementById('contact-el').style.display = 'none';
-        document.getElementById('contact-en').style.display = 'block';
+        // EN
+        document.querySelectorAll('nav.main-nav button').forEach(b => {
+          const t = b.getAttribute('data-target');
+          if (t.endsWith('-en')) b.style.display = '';
+          if (t.endsWith('-el')) b.style.display = 'none';
+        });
+        ['home-en','about-en','research-en','contact-en'].forEach(id => {
+          const sec = document.getElementById(id);
+          if (sec) sec.style.display = 'block';
+        });
+        ['home-el','about-el','research-el','contact-el'].forEach(id => {
+          const sec = document.getElementById(id);
+          if (sec) sec.style.display = 'none';
+        });
       }
       localStorage.setItem('siteLang', lang);
     }
 
-    // Init on load
     document.addEventListener('DOMContentLoaded', () => {
       const saved = localStorage.getItem('siteLang') || 'el';
       setLang(saved);
-      // Open a default tab for the initial language
+      // Ανοίξτε το αρχικό tab ανά γλώσσα
       openTab(saved === 'el' ? 'home-el' : 'home-en');
     });
   </script>
